--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           github_user_name: AdityaNair07
           outputs: dist/snake.svg
+        env:
+          ACTIONS_RUNNER_DEBUG: true
 
       - name: Push Snake
         uses: peaceiris/actions-gh-pages@v3
